test sans hover téléphone

--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@
         --logo-size-large: 65px;
         --logo-size-small: 40px;
     }
+
+    *:hover {
+        all: unset !important;
+      }
 }
 
 body {
