--- a/style/styleAccueil.css
+++ b/style/styleAccueil.css
@@ -132,8 +132,7 @@ nav a img:hover{
 
 .conteneur {
     display: flex;
-    justify-content: center;
-    gap: 50px;
+    justify-content: space-evenly;
     width: 100%;
     flex-wrap: wrap;
     margin-bottom: 100px;
