--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     --background-maillot: #acacac;
     --couleur-texte: #2E2E2E;
     --details-icon: #F5F5DC ;
-    --couleur-fond-section: #5F79B5 ;
+    --couleur-fond-section: #32436d ;
 
     --font-size-large: 40px;
     --font-size-medium: 30px;
@@ -23,8 +23,11 @@
     --gap-medium: 20px; 
     --gap-small: 13px;
 
+    /* SECTION NOUS CONTACTER */
+    --margin-form-wrapper:50px;
+
     --logo-size-large: 100px;
-    --logo-size-small: 70px;
+    --logo-size-small: 90px;
 }
 
 @media (max-width: 840px) {
@@ -49,9 +52,78 @@
     *:hover {
       pointer-events: none !important; /* Désactive les effets de hover */
     }
-  }
+}
 
 body {
     color: var(--couleur-texte);
     background-color: var(--background-color);
+}
+
+.test {
+  position: sticky;
+  top:0;
+  left:0;
+}
+
+.carousel {
+  background-color: var(--background-color);
+  width: 100%;
+  overflow: hidden;
+  border: 3px solid #000;
+}
+
+.carousel-track {
+  display: flex;
+  gap: var(--gap-medium);
+  animation: scroll 15s linear infinite;
+}
+
+.carousel-track img {
+  width: var(--gap-large); /* Ajuste la largeur selon ton besoin */
+  height: auto;
+  flex-shrink: 0;
+}
+
+@keyframes scroll {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(-50%); } /* On déplace la moitié du conteneur */
+}
+
+a {
+  text-decoration: none;
+  color: var(--couleur-texte)
+}
+
+nav {
+  width: 100%;
+  background-color: var(--background-color-nav);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: row;
+  list-style: none;
+  padding: 0.5%;
+  box-shadow: rgb(0, 0, 0) 0px 20px 30px -10px;
+}
+
+nav a {
+  font-weight: bold;
+  color:#2E2E2E;
+  font-size: var(--font-size-medium);
+  text-decoration: none;
+}
+
+nav a:hover{
+  background-color: var(--background-color-nav-hover);
+  border-radius: 5px;
+  text-decoration: underline;
+}
+
+nav a img {
+  box-shadow: rgb(0, 0, 0) 0px 20px 30px -10px;
+  width: var(--logo-size-large);
+}
+
+nav a img:hover{
+  transform: scale(1.1);
 }
