--- a/style/credits.css
+++ b/style/credits.css
@@ -7,9 +7,14 @@ h1 {
 
 h2 {
     text-decoration: underline;
-    margin: 2%
+    margin: 2%;
+    font-size: 30px;
 }
 
 p {
     margin-left: 2%;
+}
+
+main {
+    margin-bottom: 30px;;
 }
